// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`admonitions remark plugin > add custom keyword 1`] = `
"The blog feature enables you to deploy in no time a full-featured blog.

<Admonition title="Sample Title" type="info">
  Check the [Blog Plugin API Reference documentation](./api/plugins/plugin-content-blog.md) for an exhaustive list of options.
</Admonition>

## Initial setup /{#initial-setup}

To set up your site's blog, start by creating a \`blog\` directory.

<Admonition type="tip">
  Use the **[Fast Track](introduction.md#fast-track)** to understand Docusaurus in **5 minutes ⏱**!

  Use **[docusaurus.new](https://docusaurus.new)** to test Docusaurus immediately in your browser!
</Admonition>

++++tip

Admonition with different syntax

++++
"
`;

exports[`admonitions remark plugin > attributes 1`] = `
"Admonitions with attributes

<Admonition title="Info Title" className="bold" type="info">
  An info admonition with a className attribute.
</Admonition>

<Admonition className="bold italic" type="info">
  An info admonition with multiple className attributes.
</Admonition>

<Admonition id="custom-id" type="info">
  An info admonition with a custom id attribute.
</Admonition>

<Admonition className="bold" id="custom-id" type="info">
  An info admonition with both id and className attributes.
</Admonition>

<Admonition className="c1 c2" id="id2" type="info">
  Arbitrary attributes are ignored.
</Admonition>
"
`;

exports[`admonitions remark plugin > base 1`] = `
"The blog feature enables you to deploy in no time a full-featured blog.

<Admonition title="Sample Title" type="info">
  Check the [Blog Plugin API Reference documentation](./api/plugins/plugin-content-blog.md) for an exhaustive list of options.
</Admonition>

## Initial setup /{#initial-setup}

To set up your site's blog, start by creating a \`blog\` directory.

<Admonition type="tip">
  Use the **[Fast Track](introduction.md#fast-track)** to understand Docusaurus in **5 minutes ⏱**!

  Use **[docusaurus.new](https://docusaurus.new)** to test Docusaurus immediately in your browser!
</Admonition>

++++tip

Admonition with different syntax

++++
"
`;

exports[`admonitions remark plugin > default behavior for custom keyword 1`] = `
"The blog feature enables you to deploy in no time a full-featured blog.

:::info[Sample Title]
Check the [Blog Plugin API Reference documentation](./api/plugins/plugin-content-blog.md) for an exhaustive list of options.
:::

## Initial setup /{#initial-setup}

To set up your site's blog, start by creating a \`blog\` directory.

<Admonition type="tip">
  Use the **[Fast Track](introduction.md#fast-track)** to understand Docusaurus in **5 minutes ⏱**!

  Use **[docusaurus.new](https://docusaurus.new)** to test Docusaurus immediately in your browser!
</Admonition>

++++tip

Admonition with different syntax

++++
"
`;

exports[`admonitions remark plugin > interpolation 1`] = `
"Test admonition with interpolated title/body

<Admonition type="tip">
  <>My \`interpolated\` **title** <button style={{color: "red"}} onClick={() => alert("click")}>test</button></>

  \`body\` **interpolated** <button>content</button>
</Admonition>
"
`;

exports[`admonitions remark plugin > nesting 1`] = `
"Test nested Admonitions

<Admonition type="info">
  <>**Weather**</>

  On nice days, you can enjoy skiing in the mountains.

  <Admonition type="danger">
    <>*Storms*</>

    Take care of snowstorms...
  </Admonition>
</Admonition>
"
`;

exports[`admonitions remark plugin > replace custom keyword 1`] = `
"The blog feature enables you to deploy in no time a full-featured blog.

:::info[Sample Title]
Check the [Blog Plugin API Reference documentation](./api/plugins/plugin-content-blog.md) for an exhaustive list of options.
:::

## Initial setup /{#initial-setup}

To set up your site's blog, start by creating a \`blog\` directory.

<Admonition type="tip">
  Use the **[Fast Track](introduction.md#fast-track)** to understand Docusaurus in **5 minutes ⏱**!

  Use **[docusaurus.new](https://docusaurus.new)** to test Docusaurus immediately in your browser!
</Admonition>

++++tip

Admonition with different syntax

++++
"
`;
